- #294797 New $FIELD_NAME_rendered and $GROUP_NAME_rendered variables for node.tpl.php.
- #299698 Userreference: autocompletion query when typed string is '0'.
- #300236 Fix inconsistent schema for 'locked' column between install and updates.
- #292872 Do not delete data for content types defined by disabled modules.
- Do not display 'label' settings on 'advanced' subtab of 'Display fields'.

CCK 6.2.rc6
===========

Hotfix release for:
- #295537 fix warnings in update 6004 when site has no actual cck fields.
Those errors were harmless, no need to worry or run update.php again if you had them.

Minor fix:
- #265795 by smk-ka: formatter labels go through t() twice in Views exposed data.

CCK 6.2.rc5
===========

Main bugs fixed :
- #281388 Optionwidgets: Unselect values doesn't take.
- #286457 Fix menu not being always rebuilt when needed.
- #285138 by quicksketch and yched: Allow CCK to be installed in install profiles.

Main new features :
- #282183 by chx: Nodereference - 'Checkboxes/radios' widget.
- #289138 by dopry: Add support for 'locked' fields (for module-defined fields).

Other changes :
- #273502 Add descriptions to the non-CCK form elements on the Manage fields screen.
- Fix PHP warnings when field display is set to 'hidden' and field is in a fieldgroup.
- Re-introduce '<none>' choice for multiselect widgets (optionwidgets, noderef/userref select).
- #281449 Text: maxlength on textfield widget is 128 even when the field has no maximum length.
- Add tests for optionwidgets.
- #282175: Don't mention 'add more' button when the widget opts out of it.
- Optionwidgets: use '- None -' for 'no selection' option (like core's taxonomy.module).
- #286637 by poiu: clearer example for default value with php-code.
- #93436 Add $form parameter to content_validate.
- #277310 by fractile81: update node object by reference in content_load().
- #285771 Views integration: use the new 'float' filter handler where applicable.
- Fix PHP warnings when renaming a content type.